--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,37 @@ header {
     padding: 6px;
 }
 
+.main-section {
+    background-image: url(../images/grid.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    padding: 3.5% 0%;
+}
+
+.main-title {
+    color: #fff;
+    text-shadow: 2px 2px #000;
+    margin-top: 31%;
+    text-align: center;
+}
+
+.main-button {
+    margin-top: 10px;
+    padding: 8px 30px;
+    border-radius: 10px;
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: 22px;
+    background-color: transparent;
+}
+
+.main-button:hover {
+    color: #e10600;
+    border: 1px solid #e10600;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 footer {
     background-color: #000;
     padding: 15px 0;
