--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,45 @@ header {
     cursor: pointer;
 }
 
+.divisor {
+    border-bottom: 1px solid #e10600;
+    margin-bottom: 30px;
+}
+
+.news {
+    border-right: 2px solid #b4b3b3;
+    border-bottom: 2px solid #b4b3b3;
+    border-radius: 15px;
+}
+
+.news:hover {
+    border-right: 2px solid #e10600;
+    border-bottom: 2px solid #e10600;
+    transition: 0.2s;
+}
+
+.img-news {
+    width: 100%;
+}
+
+.news-title {
+    font-size: 26px;
+    margin: 10px 0;
+    color: #000;
+    margin: 10px 5px 0 5px;
+}
+
+.news-title:hover {
+    color: #e10600;
+    transition: 0.2s;
+}
+
+.news-text {
+    font-size: 16px;
+    color: #868585;
+    margin: 5px 10px 20px 5px;
+}
+
 footer {
     background-color: #000;
     padding: 15px 0;
