--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,50 @@ header {
     margin: 5px 10px 20px 5px;
 }
 
+.next-gp {
+    background-color: #000;
+    padding-bottom: 25px;
+}
+
+.gp-title {
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 18px;
+    padding: 5px 0;
+}
+
+.gp {
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 15px;
+    padding-top: 5px;
+}
+
+.date {
+    color: #fff;
+    margin-top: 5px;
+    margin-left: 15px;
+    font-weight: bold;
+}
+
+.gp-button {
+    color: #fff;
+    background-color: #bf1e2d;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 5px 25px;
+    border-radius: 5px;
+}
+
+.gp-button:hover {
+    color: #bf1e2d;
+    background-color: #fff;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 footer {
     background-color: #000;
     padding: 15px 0;
