--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,29 @@ header {
     margin: 10px 8px;
 }
 
+.links-header2 {
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 8px;
+}
+
 .links-header:hover {
     border: 1px solid #e10600;
     border-radius: 15px;
     color: #e10600;
     padding: 6px;
+}
+
+.links-header2:hover {
+    border: 1px solid #fff;
+    border-radius: 15px;
+    color: #fff;
+    padding: 6px;
+}
+
+.links-header:active {
+    color: #fff;
 }
 
 body {
@@ -186,3 +204,49 @@ footer {
     .img-footer { text-align: center; display: block; }
     .text-footer { display: block; float: inherit; font-size: 15px; margin-top: 10px; text-align: center; }
     }
+
+.gp-calendar {
+    box-shadow: 1px 1px 3px rgb(0 0 0 / 45%);
+    background-color: #fff;
+    padding: 0px 10px;
+    border-radius: 10px;
+    transition: 0.4s;
+    margin-bottom: 30px;
+}
+
+.gp-calendar:hover {
+    transform: scale(1.1);
+    transition: 0.4s;
+}
+
+.gp-name {
+    font-size: 18px;
+    color: #bf1e2d;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.gp-info {
+    font-size: 15px;
+    text-align: center;
+}
+
+.calendar-button {
+    margin: 15px 0;
+    padding: 5px 20px;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 14px;
+    text-transform: uppercase;
+    background-color: #bf1e2d;
+    transition: 0.4s;
+}
+
+.calendar-button:hover {
+    color: #bf1e2d;
+    background-color: #fff;
+    transition: 0.4s;
+    box-shadow: 1px 1px 3px rgb(0 0 0 / 45%);
+}
