--- a/css/pilotos.css
+++ b/css/pilotos.css
@@ -109,3 +109,14 @@
     margin-left: 65px;
     margin-top: -10px;
 }
+
+.team-points {
+    font-size: 15px;
+    font-weight: bold;
+    margin-left: 60px;
+    margin-top: -25px;
+}
+
+.team-drivers {
+    font-weight: 600;
+}
